--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,7 @@
 BODY{
     background-color: #d1eaeb;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 .material-icons {
@@ -25,28 +27,31 @@ body {
    h1, h2, h3, h6{
     font-family: 'Abril Fatface', serif;
     color: #ee3c33;
+    border-style: dotted;
+    border-color: rgb(204, 95, 95);
+    padding: 2%;
    }
 h1{
-    font-size: 3em;
+    font-size: 4em;
 }
 
 h2{
-    font-size: 1.5em;
+    font-size: 2.5em;
     margin-bottom: 11px;
 }
 
 h3{
-    font-size: 1.5em;
+    font-size: 2.3em;
 }
 h4{
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    font-size: 1em;
+    font-size: 2em;
 }
 
 p{
     font-family: 'Roboto', sans-serif;
-    font-size: 1.2em;
+    font-size: 1.4em;
     
 }
 */
@@ -60,9 +65,10 @@ p{
     
         font-family: 'Roboto', sans-serif;
         font-weight: 300;
-    font-size: 1.2em;
+    font-size: 1.4em;
     text-align: justify;
     text-justify: inter-word;
+    line-height: 2em;
 }
 .imgRedonda{
     width:150px;
@@ -78,15 +84,17 @@ p{
 }
 .card{
 
-    
-    margin-bottom: 3%;
+    margin-bottom: 6%;
     background-color: rgb(243, 243, 243)
 }
+
 .card-title{
     font-family:  'Roboto', sans-serif;
     font-weight: 500;
     margin-bottom: 7px;
     text-transform: uppercase;
+    font-size: 1.7em;
+    padding: 2%;
 }
 
 .card-text{
@@ -97,6 +105,7 @@ p{
     font-family: 'Roboto', sans-serif;
     font-size: small;   
     background-color: #d1eaeb;
+    position: center;
 }
 .btn:hover{
     font-family: 'Roboto', sans-serif;
@@ -113,6 +122,11 @@ p{
 }
 
 .footer{
-    font-size: 00.7em;
+    font-size: 00.8em;
 }
+
+.links:hover{
+    text-decoration: underline;
+}
+
 
